# test

./: add-o-socket.txt  analysis_input_output_modes.md  custom_postproc.c  network.h  tcnnapp
hand640_qt/: network_buf.txt  npu_cmd.h  npu_cmd.txt  oact_entry_table.py  post_process.c  post_process_backup.c  trap_point.py
hand640_qt_backup/: network.h  network_group_info.csv
rtpm/: Setting.yaml  (+1 more)
tc-nn-app-backup/: CMakeLists.txt  host_receiver.py  host_sender.py
tc-nn-app-backup/Fabless_Education_blink/Step_0/: IPC_Example.py
tc-nn-app-backup/Fabless_Education_blink/Step_2/: Data_parsing_CAN.py
tc-nn-app-backup/Fabless_Education_blink/Step_3/: Data_parsing_QT.py  demo.sh
tc-nn-app-backup/Fabless_Education_blink/Step_3/dashboard/: Makefile  dashboard.pro
tc-nn-app-backup/Fabless_Education_blink/Step_3/dashboard/qml/: dashboard.qml
tc-nn-app-backup/Fabless_Education_blink/Step_3/fabless/: fabless  fabless.pro  icons.qrc  main.cpp
tc-nn-app-backup/Fabless_Education_blink/Step_4/: demo_rc_ver.py  test.py
tc-nn-app-backup/Fabless_Education_blink/Step_4/dashboard/: main.moc
tc-nn-app-backup/Fabless_Education_blink/Step_4/dashboard/qml/: DashboardGaugeStyle.qml
tc-nn-app-backup/Fabless_Education_blink/Step_4/fabless/: main.moc  qrc_icons.cpp
tc-nn-app-backup/common/camera/: camera_api.h
tc-nn-app-backup/common/display/: display_api.h  scaler_api.c  scaler_api.h
tc-nn-app-backup/common/message/: message_api.c  message_api.h
tc-nn-app-backup/common/utils/: perf_api.h  time_api.c  time_api.h
tc-nn-app-backup/include/: NnType.h
tc-nn-app-backup/src/: NnAppMain.c  NnAppMain.h  NnDebug.c  NnDebug.h  NnMemory.c  NnNeuralNetwork.c  NnPerf.c  NnRtpm.c  NnRtpm.h  NnSignalHandler.h
(+98 files in other folders)
